feat: implement full-stack travel recommendation architecture including backend services, REST controllers, AI integration, and frontend dashboard components.